[package]
name = "bugcrawl"
version = "0.1.0"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
futures = "0.3.4"
reqwest = { version = "0.10", features = [ "json" ] }
rusqlite = "0.21"
serde = { version = "1.0", features = [ "derive" ] }
time = "0.1"
tokio = { version = "0.2", features = [ "full" ] }
